--- a/templates/home/modelo.html
+++ b/templates/home/modelo.html
@@ -1,10 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./public/css/style.css">
     <script src="nunjucks.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+
     <title>
         {% block title %}{% endblock title %}
     </title>
