--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,15 +1,22 @@
 {% extends "home/modelo.html" %}
     
-{% block title %}Textes com Express e nunjucks{% endblock title %}
+{% block title %}
+        Textes com Express e nunjucks
+{% endblock title %}
 
 {% block head %}{% endblock head %}
 
-{% block titulo %}{% endblock titulo %}
+{% block titulo %}
+        {% include "home/navbar.html" %}
+{% endblock titulo %}
+
 {% block conteudo %}
     {% for l in lista %}
-            <h1 class="text-gray-400 text-lg">express encontrou: <span class="text-green-400 text-xl">{{ l }} </span></h1>
+            <h1 class="text-sky-400 text-lg text-center">express encontrou: <span class="text-green-800 text-xl">{{ l }}</span></h1>
     {% endfor %}
             <p class="text-center text-lg font-bold text-violet-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam nihil iusto officia dicta assumenda laborum doloremque velit dolores unde quod ratione ex ipsam recusandae in hic, quis, ad vel nulla?</p>
-        
 {% endblock conteudo %}
-{% block footer %}{% endblock footer %}
+
+{% block footer %}
+        {% include "home/footer.html" %}
+{% endblock footer %}
